package com.xuan.moho.design.strategy;

/**
 * 策略接口
 *
 * @author xuan
 * @since 2021/8/15
 */
public interface Strategy {
    /**
     * 计算
     */
    int calculate(int num1, int num2);
}
